# scapp

./: .gitignore  .prettierignore  .prettierrc  .yarnrc.yml  Cargo.toml  package.json  readme.md
apps/app/: .gitignore  .prettierignore  jest.config.js  jest.setup.js  package.json  project.config.json  project.private.config.json  project.tt.json  tsconfig.json
apps/app/config/: index.ts
apps/app/protos/: payload.proto
apps/app/src/: app.config.ts  app.ts  config.ts  index.html
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/app/src-tauri/capabilities/: default.json
apps/app/src-tauri/src/: lib.rs
apps/app/src-tauri/src/channel_socket/: mod.rs
apps/app/src-tauri/src/net/: mod.rs
apps/app/src-tauri/src/plink/: mod.rs  native_channel.rs  native_connection.rs  payload.rs
apps/app/src-tauri/src/shared/: base64.rs  file.rs  mod.rs  string.rs
apps/app/src-tauri/src/socket/: mod.rs
apps/app/src-tauri/src/udp_channel/: mod.rs
apps/app/src-tauri/src/xsocket/: export.rs  mod.rs  (+1 more)
apps/app/src/server/: udpServer.ts
apps/app/types/: global.d.ts
apps/server/: Cargo.toml  db.sqlite3  diesel.toml
apps/server/examples/: expand.rs
apps/server/src/: main.rs
libs/base64-rs/: Cargo.toml  package.json  rolldown.config.mjs
libs/base64-rs/lib/: index.ts
libs/base64-rs/lib/wasm/: index.h5.ts  index.ts  index.weapp.ts
libs/base64-rs/pkg/: base64_rs.d.ts  base64_rs.js  base64_rs_bg.wasm.d.ts
libs/base64-rs/src/: lib.rs
libs/server-end/: .env  Cargo.toml
libs/server-end/migrations/2024-10-06-122009_first_tables/: down.sql  up.sql
libs/server-end/src/: lib.rs
libs/server-end/src/app/: controller.rs  mod.rs
libs/server-end/src/extractor/: active_user.rs  mod.rs
libs/server-end/src/interceptors/: auth.interceptor.rs  mod.rs
libs/server-end/src/models/: schema.rs
libs/server-end/src/models/dao/: members.rs  mod.rs  packets.rs  rooms.rs  users.rs
libs/server-end/src/modules/: mod.rs
libs/server-end/src/modules/auth/: controller.rs  dto.rs  mod.rs  service.rs
libs/server-end/src/modules/packet/: controller.rs  dto.rs  mod.rs  service.rs
libs/server-end/src/modules/room/: controller.rs  dto.rs  mod.rs  service.rs
libs/server-end/src/modules/user/: controller.rs  dto.rs  mod.rs  service.rs
libs/server-end/src/utils/: jwt.rs
test/: index.js  test.html
(+115 files in other folders)
