[workspace]
members = [
  "apps/app/src-tauri",
  "apps/server",
  "libs/base64-rs",
  "libs/server-end",
  "libs/shared",
  "libs/macros",
  "libs/datasets",
]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://github.com/nidrs/nidrs.git"
repository = "https://github.com/nidrs/nidrs.git"
license = "MIT"

[workspace.dependencies]
nidrs = { path = "../nidrs/packages/nidrs", features = ["tower", "serde", "openapi"] }
nidrs-macro = { path = "../nidrs/packages/nidrs-macro" }
nidrs-extern = { path = "../nidrs/packages/nidrs-extern" }

shared = { path = "libs/shared" }
macros = { path = "libs/macros" }
datasets = { path = "libs/datasets" }
server-end = { path = "libs/server-end" }
