[package]
name = "server-end"
version = "0.1.0"
publish = false
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.115"
serde = { version = "1.0.193", features = ["derive"] }
dotenvy = "0.15"
utoipa = { version = "5", features = ["chrono", "macros"] }

nidrs = { workspace = true }
nidrs-macro = { workspace = true }
nidrs-extern = { workspace = true }
nidrs-diesel = { path = "../../../nidrs/packages/nidrs-diesel", features = ["sqlite_async"] }
diesel = { version = "2.2.4", features = ["chrono"] }
diesel-async = { version = "0.5.2" }

chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3.0"

shared = { workspace = true }
macros = { workspace = true }
datasets = { workspace = true }
